kuber/kube-prometheus-stack/traefik-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics-service
  labels:
    app: traefik-metrics
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
  - name: metrics
    port: 9100
