kuber/kube-prometheus-stack/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-state-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.local.m1xxos.me`)
      kind: Rule
      services:
        - name: kube-prom-stack-grafana
          namespace: monitoring
          port: 80
  tls:
   secretName: local-m1xxos-me
